--- a/src/index.css
+++ b/src/index.css
@@ -72,10 +72,10 @@ a {
   --dark-color-primary: #242526;
   --dark-color-secondary: #f99417;
   --red-color: #ff443b;
-  --blue-color: #0096ff;
+  --blue-color: #4682a9;
   --light-blue-color: #0096ff21;
   --blue: #181ff2a7;
-  --green-color: #42b72a;
+  --green-color: #47a992;
   --light-blue-color: #e7f3ff;
   --border-color: #ccced2;
   --shadow-1: rgba(0, 0, 0, 0.1);
