--- a/src/components/posts/post/comments/CreateComment.module.css
+++ b/src/components/posts/post/comments/CreateComment.module.css
@@ -21,7 +21,7 @@
   color: var(--color-secondary);
   height: 38px;
   flex: 1 1;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   font-size: 15px;
   line-height: 21px;
   display: flex;
