--- a/src/components/header/SearchMenu.module.css
+++ b/src/components/header/SearchMenu.module.css
@@ -36,7 +36,7 @@
   gap: 6px;
   background: var(--bg-forth);
   padding: 10px 20px 10px 13px;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   cursor: text;
   min-width: 233px;
 }
@@ -97,7 +97,7 @@
   gap: 12px;
   font-size: 14px;
   padding: 5px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   cursor: pointer;
   color: var(--color-primary);
   font-weight: 600;
@@ -115,7 +115,7 @@
 }
 
 .search_item {
-  border-radius: 10px;
+  /* border-radius: 10px; */
   padding: 2px 5px;
 }
 .search_user_item {
