--- a/src/components/home/posts/CreatePost/CreatePost.module.css
+++ b/src/components/home/posts/CreatePost/CreatePost.module.css
@@ -1,7 +1,7 @@
 .create_post {
   width: 100%;
   background: var(--bg-primary);
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: 0 1px 2px var(--shadow-1);
   cursor: pointer;
 }
@@ -19,11 +19,11 @@
   object-fit: cover;
 }
 .open_post {
-  background: var(--bg-forth);
+  /* background: var(--bg-forth); */
   color: var(--color-secondary);
   height: 41px;
   flex: 1;
-  border-radius: 50px;
+  /* border-radius: 50px; */
   font-size: 17px;
   line-height: 21px;
   display: flex;
