--- a/src/components/posts/post/Post.module.css
+++ b/src/components/posts/post/Post.module.css
@@ -1,12 +1,17 @@
 .post {
   padding: 0;
+  position: relative;
 }
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 8px;
-  padding: 15px 10px 0;
+  padding: 10px 5px 0;
+  position: absolute;
+  background: transparent;
+  width: 100%;
+  z-index: 10;
 }
 .header .left img {
   width: 40px;
@@ -22,6 +27,9 @@
   font-weight: 600;
   cursor: pointer;
   width: max-content;
+  text-transform: capitalize;
+  -webkit-text-stroke-width: 0.4px;
+  -webkit-text-stroke-color: #65676b;
 }
 .username:hover {
   text-decoration: underline;
@@ -32,6 +40,8 @@
   color: var(--color-secondary);
   display: flex;
   gap: 5px;
+  -webkit-text-stroke-width: 0.2px;
+  -webkit-text-stroke-color: #65676b;
 }
 .date:hover {
   text-decoration: underline;
@@ -59,10 +69,10 @@
   font-weight: 700;
   color: #fff;
   text-align: center;
-  margin-top: 15px;
+  /* margin-top: 15px; */
 }
 .normal {
-  padding: 8px 16px;
+  /* padding: 8px 16px; */
   font-size: 24px;
   font-weight: 400;
   white-space: pre-line;
@@ -72,7 +82,7 @@
   height: inherit;
   width: 100%;
   max-height: inherit;
-  margin-top: 8px;
+  /* margin-top: 8px; */
 }
 .images_wrap img {
   height: inherit;
@@ -181,10 +191,13 @@
   justify-content: space-around;
   padding: 3px 0;
   height: 40px;
-  position: relative;
+  /* position: absolute; */
   margin: 0 16px 10px;
-  border-top: 1px solid var(--divider);
-  border-bottom: 1px solid var(--divider);
+  /* border-top: 1px solid var(--divider); */
+  /* border-bottom: 1px solid var(--divider); */
+  background: transparent;
+  /* width: 100%; */
+  bottom: 0;
 }
 
 .action_elment {
@@ -195,7 +208,7 @@
   cursor: pointer;
   width: 30%;
   height: 100%;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 .action_elment span {
   font-size: 14px;
@@ -224,7 +237,7 @@
   font-weight: 600;
   padding: 10px;
   cursor: pointer;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 .post_menu_text {
   display: flex;
@@ -238,6 +251,8 @@
   font-size: 14px;
   font-weight: 400;
   margin: 0 6px;
+  -webkit-text-stroke-width: 0.4px;
+  -webkit-text-stroke-color: #65676b;
 }
 .profilePhoto_wrap {
   display: flex;
@@ -248,7 +263,7 @@
   height: 480px;
 }
 .profilePhoto_wrap img {
-  border-radius: 50%;
+  border-radius: 15%;
   border: 4px solid var(--bg-primary);
   width: 350px;
   position: absolute;
@@ -258,7 +273,7 @@
   width: 100%;
   padding: 20%;
   background: var(--bg-third);
-  border-radius: 0 0 10px 10px;
+  /* border-radius: 0 0 10px 10px; */
   background-size: cover;
   background-position: center;
 }
