--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -12,7 +14,7 @@
 }
 
 body {
-  font-family: "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
   background: var(--bg-secondary);
 }
 
@@ -58,23 +60,23 @@ a {
 :root {
   --app-height: 100vh;
 
-  --bg-primary: #f5f5f5;
-  --bg-secondary: #f0f2f5;
-  --bg-third: #e4e6eb;
+  --bg-primary: #fff8f0;
+  --bg-secondary: #fff8f0;
+  --bg-third: #9dd9d2;
   --bg-forth: #53526d24;
-  --color-primary: #363062;
-  --color-secondary: #65676b;
-  --divider: #4d4c7d;
+  --color-primary: #392f5a;
+  --color-secondary: #9dd9d2;
+  --divider: #e08d79;
   --dark-bg-primary: #18191a;
   --dark-bg-secondary: #242526;
-  --dark-bg-third: #3a3b3c;
-  --dark-bg-forth: #3a3b3c;
-  --dark-color-primary: #242526;
-  --dark-color-secondary: #f99417;
+  --dark-bg-third: #e08d79;
+  --dark-bg-forth: #e08d79;
+  --dark-color-primary: #49416d;
+  --dark-color-secondary: #b3f2dd;
   --red-color: #ff443b;
   --blue-color: #4682a9;
   --light-blue-color: #0096ff21;
-  --blue: #181ff2a7;
+  --blue: #b3f2dd;
   --green-color: #47a992;
   --light-blue-color: #e7f3ff;
   --border-color: #ccced2;
@@ -131,7 +133,7 @@ a {
   outline: none;
   background: var(--blue-color);
   padding: 8.5px 12px;
-  border-radius: 7px;
+  /* border-radius: 7px; */
   font-family: inherit;
   color: #fff;
   display: flex;
@@ -149,7 +151,7 @@ a {
   outline: none;
   background: var(--light-blue-color);
   padding: 8.5px 12px;
-  border-radius: 7px;
+  /* border-radius: 7px; */
   font-family: inherit;
   font-weight: 600;
   font-size: 14px;
@@ -166,7 +168,7 @@ a {
   outline: none;
   background: var(--bg-third);
   padding: 8.5px 12px;
-  border-radius: 7px;
+  /* border-radius: 7px; */
   font-family: inherit;
   font-weight: 600;
   font-size: 14px;
