--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -1,16 +1,16 @@
 .dark {
-  --bg-primary: #242526;
-  --bg-secondary: #18191a;
+  --bg-primary: #232c33;
+  --bg-secondary: #04151f;
   --bg-third: #3a3b3c;
   --bg-forth: #3a3b3c;
   --bg-fifth: #888888;
   --color-primary: #e4e6eb;
-  --color-secondary: #b0b3b8;
+  --color-secondary: #white;
   --divider: #4e4e4e;
-  --light-blue-color: rgba(45, 136, 255, 0.1);
+  --light-blue-color: #8fb8ed;
 }
 .dark .blur {
-  background: rgba(1, 1, 1, 0.53);
+  background: rgba(1, 1, 1, 0.23);
 }
 .dark .small_circle i {
   filter: invert(100%);
