--- a/src/components/input/login/input.module.css
+++ b/src/components/input/login/input.module.css
@@ -5,7 +5,7 @@
 .wrap input {
   background: var(--bg-primary);
   border: 1px solid var(--bg-third);
-  border-radius: 10px;
+  /* border-radius: 10px; */
   color: var(--color-primary);
   font-size: 17px;
   height: 50px;
